[package]
name = "dim"
version = "0.2.1"
authors = [ "Koen Wilde <koen@chillheid.nl>" ]
description = "Dim your screen"
keywords = [ "wayland" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/koenw/dimmer"
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
structopt = "^0.3"
humantime = "^2.2"
glob = "^0.3"
xdg = "^3.0"
anyhow = "^1.0"
thiserror = "^2.0"

[profile.release]
strip = true
lto = true
panic = "abort"
