[package]
name = "dim"
version = "0.4.0"
description = "Dim or brighten your screen"
keywords = [ "wayland" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/koenw/dimmer"
license = "Unlicense OR MIT"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
humantime = "^2.2"
glob = "^0.3"
xdg = "^3.0"
anyhow = "^1.0"
thiserror = "^2.0"
clap = { version = "4.6.1", features = ["env", "derive"] }
dbus = { version = "0.9.11", optional = true }

[features]
default = ["dbus"]
dbus = ["dep:dbus"]
